--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
+
 .App {
-  width: 90%;
-  margin: 1.25rem auto;
+
+}
+
+.App::after{
+  z-index: -1;
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  width: 44%;
+  background-color: #57B8FF;
+
+  
 }
