--- a/src/UI/Heading.module.scss
+++ b/src/UI/Heading.module.scss
@@ -1,13 +1,7 @@
 @import "../vars.scss";
 
-.wrapperHeading {
-    display: inline-flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
 .heading {
-    @include font(1rem, 1rem, $secondary);
-    text-transform: uppercase;
-}
 
+    @include font(4.5rem, 5.375rem);
+    text-transform: capitalize;
+}
