--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,4 +1,50 @@
-.header {
+@import "../vars.scss";
 
+.header {
+    z-index: 2;
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+
+}
+
+
+.description {
+    @include font(1.125rem, 1.75rem, #999);
+
+    margin-top: 45px;
+    width: 615px;
+}
+
+.wrapperButton {
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 40px;
+
+    margin-top: 50px;
+
+    
+}
+
+.buttonDescription {
+    @include font(1.125rem, 1.75rem);
+}
+
+.leftBlock {
+    z-index: 2;
+    width: 660px;
+    height: 528px;
+    flex-shrink: 0;
+}
+
+.rightBlock {
+    z-index: 2;
+    background: url(../images/headerLead.png), rgba(0, 0, 0, 0) 50% / cover no-repeat;
+    width: 660px;
+    height: 518px;
+    flex-shrink: 0;
 
 }
