--- a/src/UI/Heading.module.scss
+++ b/src/UI/Heading.module.scss
@@ -5,3 +5,12 @@
     @include font(4.5rem, 5.375rem);
     text-transform: capitalize;
 }
+
+.headingDecoration {
+    @include font(1.4375rem, 2.125rem);
+    text-transform: capitalize;
+}
+
+.headingH3 {
+    @include font(2.25rem, 2.875rem);
+}
