--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,33 @@
   right: 0;
   top: 0;
   height: 110vh;
-  width: 44%;
+  width: 43%;
   background-color: #57B8FF;
 
   
+}
+
+
+@media (min-width:1600px) {
+  .App::after{
+      width: 40%;
+  }
+}
+
+@media (min-width:1466px) {
+  .App::after{
+      width: 39%;
+  }
+}
+
+@media (max-width: 1044px){
+  .App::after {
+    width: 20%;
+  }
+}
+
+@media (max-width: 725px) {
+    .App::after {
+      display: none;
+    }
 }
