--- a/src/header/Nav.module.scss
+++ b/src/header/Nav.module.scss
@@ -1,9 +1,15 @@
 @import "../vars.scss";
 
 .nav {
+    z-index: 4;
+
+    position: absolute;
+    top: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    width: 80%;
 }
 
 .links {
@@ -22,4 +28,30 @@
     justify-content: center;
     align-items: center;
     gap:2.5rem;
+}
+
+.burger {
+    display: none;
+}
+
+@media (max-width: 1177px) {
+    .links {
+        gap: 15px;
+    }
+}
+
+@media (max-width:1000px) {
+    .logotip {
+        display: none;
+    }
+}
+
+@media (max-width: 725px) {
+    .links {
+        display: none;
+    }
+    .burger {
+        z-index: -1;
+        display: block;
+    }
 }
